// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputField /> Default story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":r0:"
      >
        Default input field
      </label>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r1:"
        aria-invalid="false"
        class="input"
        id=":r0:"
        type="text"
      />
    </div>
    <div
      class="field-note"
      id=":r1:"
    >
      This is a fieldnote.
    </div>
  </div>
</div>
`;

exports[`<InputField /> Disabled story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label input-field__label--disabled"
        for=":r6:"
      >
        Disabled input field
      </label>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r7:"
        aria-invalid="false"
        class="input"
        disabled=""
        id=":r6:"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--disabled"
      id=":r7:"
    >
      This InputField is disabled
    </div>
  </div>
</div>
`;

exports[`<InputField /> DisabledVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label input-field__label--disabled"
          for=":r1e:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r1f:"
          aria-invalid="false"
          class="input"
          disabled=""
          id=":r1e:"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id=":r1f:"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label input-field__label--disabled"
          for=":r1g:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r1h:"
          aria-invalid="false"
          class="input"
          disabled=""
          id=":r1g:"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id=":r1h:"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label input-field__label--disabled"
          for=":r1i:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          disabled=""
          id=":r1i:"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label input-field__label--disabled"
          for=":r1k:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          disabled=""
          id=":r1k:"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r1n:"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          disabled=""
          id=":r1m:"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id=":r1n:"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r1p:"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          disabled=""
          id=":r1o:"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id=":r1p:"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          disabled=""
          id=":r1q:"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          disabled=""
          id=":r1s:"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> Error story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":r4:"
      >
        Error input field
      </label>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r5:"
        aria-invalid="true"
        class="input error"
        id=":r4:"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--error"
      id=":r5:"
    >
      <svg
        class="icon field-note__icon"
        fill="currentColor"
        height="1rem"
        role="img"
        style="--icon-size: 1rem;"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          error
        </title>
        <path
          d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
        />
      </svg>
      This is a fieldnote with an error.
    </div>
  </div>
</div>
`;

exports[`<InputField /> ErrorVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":ru:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":rv:"
          aria-invalid="true"
          class="input error"
          id=":ru:"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id=":rv:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":r10:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r11:"
          aria-invalid="true"
          class="input error"
          id=":r10:"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id=":r11:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":r12:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="true"
          class="input error"
          id=":r12:"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":r14:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="true"
          class="input error"
          id=":r14:"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r17:"
          aria-invalid="true"
          aria-label="Label text"
          class="input error"
          id=":r16:"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id=":r17:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r19:"
          aria-invalid="true"
          aria-label="Label text"
          class="input error"
          id=":r18:"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id=":r19:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="true"
          aria-label="Label text"
          class="input error"
          id=":r1a:"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="true"
          aria-label="Label text"
          class="input error"
          id=":r1c:"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> InputWithin story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":rc:"
      >
        Input field with button inside
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-invalid="false"
        class="input"
        id=":rc:"
        type="text"
      />
      <div
        class="input-field__input-within"
      >
        <button
          class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand button button--icon"
          type="button"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> LabelFieldnoteVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":re:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":rf:"
          aria-invalid="false"
          class="input"
          id=":re:"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id=":rf:"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":rg:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":rh:"
          aria-invalid="false"
          class="input"
          id=":rg:"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id=":rh:"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":ri:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          id=":ri:"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":rk:"
        >
          Label text
        </label>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          id=":rk:"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":rn:"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          id=":rm:"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id=":rn:"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":rp:"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          id=":ro:"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id=":rp:"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          id=":rq:"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          id=":rs:"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> NoFieldnote story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":r2:"
      >
        Default input field
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-invalid="false"
        class="input"
        id=":r2:"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> NoVisibleLabel story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline input-field__overline--no-label"
    >
      <span
        class="text text--sm input-field__required-text"
      >
        Required
      </span>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":rb:"
        aria-invalid="false"
        aria-label="Input for no visible label"
        class="input"
        id=":ra:"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id=":rb:"
    >
      This input field has no visible label
    </div>
  </div>
</div>
`;

exports[`<InputField /> Required story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":r8:"
      >
        Input field with fieldNote
      </label>
      <span
        class="text text--sm input-field__required-text"
      >
        Required
      </span>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r9:"
        aria-invalid="false"
        class="input"
        id=":r8:"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id=":r9:"
    >
      This is a fieldnote for a required input field.
    </div>
  </div>
</div>
`;

exports[`<InputField /> RequiredVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":r1u:"
        >
          Label text
        </label>
        <span
          class="text text--sm input-field__required-text"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r1v:"
          aria-invalid="false"
          class="input"
          id=":r1u:"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id=":r1v:"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":r20:"
        >
          Label text
        </label>
        <span
          class="text text--sm input-field__required-text"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r21:"
          aria-invalid="false"
          class="input"
          id=":r20:"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id=":r21:"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":r22:"
        >
          Label text
        </label>
        <span
          class="text text--sm input-field__required-text"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          id=":r22:"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":r24:"
        >
          Label text
        </label>
        <span
          class="text text--sm input-field__required-text"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          class="input"
          id=":r24:"
          required=""
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__overline input-field__overline--no-label"
      >
        <span
          class="text text--sm input-field__required-text"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r27:"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          id=":r26:"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id=":r27:"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline input-field__overline--no-label"
      >
        <span
          class="text text--sm input-field__required-text"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r29:"
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          id=":r28:"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id=":r29:"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="input-field__overline input-field__overline--no-label"
      >
        <span
          class="text text--sm input-field__required-text"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          id=":r2a:"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="input-field__overline input-field__overline--no-label"
      >
        <span
          class="text text--sm input-field__required-text"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="input"
          id=":r2c:"
          required=""
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, label, isError
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":r2e:"
        >
          Label text
        </label>
        <span
          class="text text--sm input-field__required-text"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r2f:"
          aria-invalid="true"
          class="input error"
          id=":r2e:"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id=":r2f:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label"
          for=":r2g:"
        >
          Label text
        </label>
        <span
          class="text text--sm input-field__required-text"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r2h:"
          aria-invalid="true"
          class="input error"
          id=":r2g:"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id=":r2h:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      fieldNote, label, disabled
    </p>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label input-field__label--disabled"
          for=":r2i:"
        >
          Label text
        </label>
        <span
          class="text text--sm input-field__required-text input-field__required-text--disabled"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r2j:"
          aria-invalid="false"
          class="input"
          disabled=""
          id=":r2i:"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id=":r2j:"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="input-field__overline"
      >
        <label
          class="label label--lg input-field__label input-field__label--disabled"
          for=":r2k:"
        >
          Label text
        </label>
        <span
          class="text text--sm input-field__required-text input-field__required-text--disabled"
        >
          Required
        </span>
      </div>
      <div
        class="input-field__body input-field--has-fieldNote"
      >
        <input
          aria-describedby=":r2l:"
          aria-invalid="false"
          class="input"
          disabled=""
          id=":r2k:"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id=":r2l:"
      >
        fieldNote text
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> TabularInput story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <table
    class="table"
  >
    <thead>
      <tr
        class="table-row"
      >
        <th
          class="table-header-cell"
        >
          Label
        </th>
        <th
          class="table-header-cell"
        >
          Field
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-row"
      >
        <td
          class="table-cell flex items-center"
        >
          <label
            class="label flex items-center"
            for="field-1"
            id="input-1"
          >
            Input One
             
          </label>
        </td>
        <td
          class="table-cell"
        >
          <div>
            <div
              class="input-field__body"
            >
              <input
                aria-invalid="false"
                aria-label="redundant"
                aria-labelledby="input-1"
                class="input"
                id="field-1"
                placeholder="click the label to highlight field"
                type="text"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<InputField /> WithAMaxLength story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":r2m:"
      >
        test label
      </label>
      <span
        class="text text--sm input-field__required-text"
      >
        Required
      </span>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-invalid="false"
        class="input error"
        id=":r2m:"
        maxlength="15"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithARecommendedLength story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":r2o:"
      >
        test label
      </label>
      <span
        class="text text--sm input-field__required-text"
      >
        Required
      </span>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-invalid="false"
        class="input error"
        id=":r2o:"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithBothMaxAndRecommendedLength story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--lg input-field__label"
        for=":r2q:"
      >
        test label
      </label>
      <span
        class="text text--sm input-field__required-text"
      >
        Required
      </span>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r2r:"
        aria-invalid="false"
        class="input error"
        id=":r2q:"
        maxlength="20"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note field-note--error"
        id=":r2r:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        Longer Field Description
      </div>
      <div
        class="input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
    </div>
  </div>
</div>
`;
